--- a/docs/r0_manuscript/r0_manuscript.tex
+++ b/docs/r0_manuscript/r0_manuscript.tex
@@ -5,6 +5,7 @@
   nolmodern,
   notxfonts,
   notimes,
+  mask,
   colorlinks=true,linkcolor=blue,citecolor=blue,urlcolor=blue]{apa7}
 
 \usepackage{amsmath}
@@ -162,7 +163,7 @@
 
 
 
-\authorsnames[{1},{1},{1},{2},{3},{2},{4},{5},{6,7},{1}]{Mikayla
+\authorsnames[{1},{1},{1},{2},{3},{2},{4,5},{6},{7,8},{1}]{Mikayla
 Lalli,Nour Al Afif,Jiaqiao Tang,Hibaa Hasan,Enuri Dissanayake,Vida
 Sussman,Rakshith Lokesh,Scott Rathwell,Joshua G.A. Cashaback,Michael J.
 Carter}
@@ -176,7 +177,8 @@ Carter}
 \authorsaffiliations{
 {Department of Kinesiology, McMaster University},{Department of
 Psychology, Neuroscience \& Behaviour, McMaster University},{School of
-Interdisciplinary Science, McMaster University},{College of
+Interdisciplinary Science, McMaster University},{Department of Biology,
+Northeastern University},{Department of Electrical and Computer
 Engineering, Northeastern University},{Department of Kinesiology \&
 Physical Education, University of Lethbridge},{Department of Biomedical
 Engineering, University of Delaware},{Department of Mechanical
@@ -502,17 +504,17 @@ code are available at
 
 \subsection{Participants}\label{participants}
 
-A sample of 100 undergraduate and graduate students at McMaster
-University (50 human pairs, \emph{M}\textsubscript{age} = 18.51 years,
-\emph{SD} = 2.01) participated in the experiment. Sample size was
-determined \emph{a priori} as 2.5 times the original sample size in
-Curioni et al. (\citeproc{ref-curioni2022}{2022}) based on the
-recommendations of Simonsohn (\citeproc{ref-simonsohn2015}{2015}). All
-participants self-reported that they were free of sensorimotor
-impairments and had normal or corrected-to-normal vision. Participants
-were compensated with \$5 CAD or with course-credit for their time. All
-participants provided written informed consent and the experiment was
-approved by the McMaster Research Ethics Board.
+A sample of 100 undergraduate and graduate students (50 human pairs,
+\emph{M}\textsubscript{age} = 18.51 years, \emph{SD} = 2.01)
+participated in the experiment. Sample size was determined \emph{a
+priori} as 2.5 times the original sample size in Curioni et al.
+(\citeproc{ref-curioni2022}{2022}) based on the recommendations of
+Simonsohn (\citeproc{ref-simonsohn2015}{2015}). All participants
+self-reported that they were free of sensorimotor impairments and had
+normal or corrected-to-normal vision. Participants were compensated with
+\$5 CAD or with course-credit for their time. All participants provided
+written informed consent and the experiment was approved by the
+University's Research Ethics Board.
 
 \subsection{Task and apparatus}\label{task-and-apparatus}
 
@@ -1074,16 +1076,11 @@ et al., 2022}) and that these preferences are highly individualized.
 
 \section{Declarations}\label{declarations}
 
-\noindent \textbf{Funding.} ~This work was supported by the Natural
-Sciences and Engineering Research Council (NSERC) of Canada
-(RGPIN-2018-05589; MJC), McMaster University (MJC), and the National
-Science Foundation (NSF: 2146888; JGAC).
-
 \noindent \textbf{Conflicts of interest/Competing interests.} ~None.
 
 \noindent \textbf{Ethics approval.} ~This project was approved and
-conducted in accordance with the approval of the McMaster University
-Research Ethics Board.
+conducted in accordance with the approval of the University's Research
+Ethics Board.
 
 \noindent \textbf{Consent to participate.} ~All participants gave
 informed consent.
