--- a/docs/r0_manuscript/r0_manuscript.tex
+++ b/docs/r0_manuscript/r0_manuscript.tex
@@ -1076,6 +1076,11 @@ et al., 2022}) and that these preferences are highly individualized.
 
 \section{Declarations}\label{declarations}
 
+\noindent \textbf{Funding.} ~This work was supported by the Natural
+Sciences and Engineering Research Council (NSERC) of Canada
+(RGPIN-2018-05589; MJC), McMaster University (MJC), and the National
+Science Foundation (NSF: 2146888; JGAC).
+
 \noindent \textbf{Conflicts of interest/Competing interests.} ~None.
 
 \noindent \textbf{Ethics approval.} ~This project was approved and
