--- a/docs/r0_manuscript/r0_manuscript.tex
+++ b/docs/r0_manuscript/r0_manuscript.tex
@@ -498,9 +498,9 @@ clear.
 We report how we determined our sample size, all data exclusions (if
 any), all manipulations, and all measures in the study
 (\citeproc{ref-simmons2012}{Simmons et al., 2012}). Our preregistration
-can be accessed at \url{https://doi.org/10.17605/OSF.IO/EVDP5}. Data and
+can be accessed at \url{https://doi.org/10.17605/osf.io/evdp5}. Data and
 code are available at
-\url{https://github.com/cartermaclab/expt_solo-or-joint-action}.
+\url{https://osf.io/fq3mz/?view_only=8dffee7f8b364159b30ec8527ee0c498}.
 
 \subsection{Participants}\label{participants}
 
@@ -1076,10 +1076,8 @@ et al., 2022}) and that these preferences are highly individualized.
 
 \section{Declarations}\label{declarations}
 
-\noindent \textbf{Funding.} ~This work was supported by the Natural
-Sciences and Engineering Research Council (NSERC) of Canada
-(RGPIN-2018-05589; MJC), McMaster University (MJC), and the National
-Science Foundation (NSF: 2146888; JGAC).
+\noindent \textbf{Funding.} ~This work was supported by {[}anonymized
+source{]}, {[}anonymized source{]}, and {[}anonymized source{]}.
 
 \noindent \textbf{Conflicts of interest/Competing interests.} ~None.
 
@@ -1094,7 +1092,8 @@ informed consent.
 manuscript.
 
 \noindent \textbf{Availability of data, materials, and code} ~Can be
-accessed at https://github.com/cartermaclab/expt\_solo-or-joint-action.
+accessed at
+\url{https://osf.io/fq3mz/?view_only=8dffee7f8b364159b30ec8527ee0c498}.
 
 \newpage
 
