--- a/docs/r0_manuscript/r0_manuscript.tex
+++ b/docs/r0_manuscript/r0_manuscript.tex
@@ -1076,23 +1076,25 @@ et al., 2022}) and that these preferences are highly individualized.
 
 \section{Declarations}\label{declarations}
 
-\noindent \textbf{Funding.} ~This work was supported by {[}anonymized
-source{]}, {[}anonymized source{]}, and {[}anonymized source{]}.
+\noindent \textbf{Funding.} \space This work was supported by
+{[}anonymized source{]}, {[}anonymized source{]}, and {[}anonymized
+source{]}.
 
-\noindent \textbf{Conflicts of interest/Competing interests.} ~None.
+\noindent \textbf{Conflicts of interest/Competing interests.}
+\space None.
 
-\noindent \textbf{Ethics approval.} ~This project was approved and
+\noindent \textbf{Ethics approval.} \space This project was approved and
 conducted in accordance with the approval of the University's Research
 Ethics Board.
 
-\noindent \textbf{Consent to participate.} ~All participants gave
+\noindent \textbf{Consent to participate.} \space All participants gave
 informed consent.
 
-\noindent \textbf{Consent for publication.} ~All authors approve the
-manuscript.
+\noindent \textbf{Consent for publication.} \space All authors approve
+the manuscript.
 
-\noindent \textbf{Availability of data, materials, and code} ~Can be
-accessed at
+\noindent \textbf{Availability of data, materials, and code.}
+\space Available at
 \url{https://osf.io/fq3mz/?view_only=8dffee7f8b364159b30ec8527ee0c498}.
 
 \newpage
