--- a/docs/r0_manuscript/r0_manuscript.tex
+++ b/docs/r0_manuscript/r0_manuscript.tex
@@ -498,8 +498,9 @@ clear.
 We report how we determined our sample size, all data exclusions (if
 any), all manipulations, and all measures in the study
 (\citeproc{ref-simmons2012}{Simmons et al., 2012}). Our preregistration
-can be accessed at \url{https://doi.org/10.17605/osf.io/evdp5}. Data and
-code are available at
+is available at
+\url{https://osf.io/evdp5/?view_only=e563ac68c50e424d9da8a7f4888ea3e5}.
+Data and code are available at
 \url{https://osf.io/fq3mz/?view_only=8dffee7f8b364159b30ec8527ee0c498}.
 
 \subsection{Participants}\label{participants}
